# automobile-price-prediction

./: .gitignore  README.md  pyproject.toml
experiments/: original_dnn_experiments.md
outputs/automobile-price-prediction-project/: .gitignore  app.py
outputs/automobile-price-prediction-project/data/: README.md
outputs/automobile-price-prediction-project/src/automobile_price/: data.py
reports/: metrics.json
src/automobile_price/: __init__.py  config.py  modeling.py  train.py
