[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "automobile-price-prediction"
version = "0.1.0"
description = "Portfolio-ready automobile price prediction project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "streamlit>=1.30",
]

[tool.setuptools.packages.find]
where = ["src"]
